--- a/src/pages/CustomersPage/components/Content/style.module.less
+++ b/src/pages/CustomersPage/components/Content/style.module.less
@@ -41,6 +41,23 @@
 .colorBlack {
   color: #000000!important;
 }
+.linkBtn {
+  background: #F9D74D;
+  border-radius: 5px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  height: 35px;
+  margin-left: 15px;
+}
+.mr1 {
+  margin-right: 5px;
+}
+.btnSearch {
+  height: 33px;
+}
 // .btnLeft {
 //   margin-left: 20px;
 //   background-color: ' #FFCF0E';
