Popup create project

--- a/src/pages/Projectpage/style.module.less
+++ b/src/pages/Projectpage/style.module.less
@@ -39,7 +39,7 @@
 }
 .titleContainer {
   width: 100%;
-  min-height: 40px;
+  min-height: 50px;
 }
 .contentContainer {
   width: 100%;
@@ -48,4 +48,26 @@
   border: 1px solid #dbdbdb;
   border-radius: 5px;
   background-color: #ffffff;
+}
+.linkBtn {
+  background: #FFCF0E;
+  border-radius: 5px;
+  color: #333132;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 7px 20px;
+  height: 35px;
+  margin-left: 15px;
+  cursor: pointer;
+  transition: all .3s;
+  &:hover {
+    color: #333132;
+  }
+}
+.mr1 {
+  margin-right: 5px;
+}
+.textRight {
+  text-align: right;
 }
