--- a/src/pages/CustomersPage/CustomerDetail/components/Content/style.module.less
+++ b/src/pages/CustomersPage/CustomerDetail/components/Content/style.module.less
@@ -16,7 +16,7 @@
 }
 .missingDocsBtn {
   background-color: #ffcf0e !important;
-  color: #000000 !important;
+  color: #333132 !important;
 }
 :global {
   .ant-btn {
@@ -39,18 +39,23 @@
   margin-left: 15px;
 }
 .colorBlack {
-  color: #000000!important;
+  color: #333132!important;
 }
 .linkBtn {
-  background: #F9D74D;
+  background: #FFCF0E;
   border-radius: 5px;
-  color: #000000;
+  color: #333132;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 20px;
   height: 35px;
   margin-left: 15px;
+  cursor: pointer;
+  transition: all .3s;
+  &:hover {
+    color: #333132;
+  }
 }
 .mr1 {
   margin-right: 5px;
