Form add customer

--- a/src/pages/CustomersPage/FormNewCustomer/style.module.less
+++ b/src/pages/CustomersPage/FormNewCustomer/style.module.less
@@ -49,3 +49,47 @@
   border-radius: 5px;
   background-color: #ffffff;
 }
+.bgWhite {
+  background: #ffffff;
+}
+.pd3 {
+  padding: 30px;
+}
+.textCenter {
+  text-align: center;
+}
+.textRight {
+  text-align: right;
+}
+.mt5 {
+  margin-top: 50px!important;
+}
+.pr1 {
+  padding-right: 15px!important;
+}
+.pl1 {
+  padding-left: 15px!important;
+}
+.btnSmall {
+  height: 35px !important;
+  margin-left: 10px;
+  margin-top: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #fff;
+}
+.imageBtn {
+  background-color: #007bd7 !important;
+  color: #ffffff !important;
+}
+.redBtn {
+  background-color: #FF2E0E !important;
+  color: #ffffff !important;
+}
+.borderBtn {
+    border: 1px solid #D1D3D4!important;
+    color: #949494 !important;
+}
+img {
+  max-width: 100%;
+}
