--- a/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
@@ -27,7 +27,7 @@
   color: #333132;
 }
 .fileContainer {
-  padding: 20px;
+  // padding: 20px;
   background-color: #e4e4e4;
   width: 100%;
   height: 665px;
@@ -66,13 +66,39 @@
   background-color: #16a085 !important;
   color: #fff;
 }
-.Viewer {
-  background-color: #444;
+.viewer {
+  background-color: #e4e4e4;
   width: 100%;
-  height: 100%;
-  position: relative;
+  height: 664px;
+  padding-top: 50px;
+  padding-bottom: 20px;
   overflow: scroll;
 }
 .inputHeight {
   height: 40px !important;
+}
+.react-pdf__Page {
+  margin: 10px;
+}
+.pdfBtnContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.btn {
+  width: 40px !important;
+  height: 40px !important;
+  background-color: #ffffff !important;
+  color: gray !important;
+}
+.pdf_container {
+  margin: 0 auto;
+}
+.pdfPage {
+  margin: 30px auto;
+}
+.zoomBtn {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
