--- a/src/pages/ProjectViewerpage/components/Content/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/style.module.less
@@ -5,7 +5,8 @@
 .toolbar {
   background-color: #ffffff;
   border-top-width: 0;
-  box-shadow: 0 2px 1px -2px gray;
+  border-bottom: solid 1px #dcdcdc;
+  max-height: 500px;
   z-index: 0;
   padding-bottom: 10px;
   width: 100%;
@@ -17,6 +18,8 @@
 .missingDocsBtn {
   background-color: #ffcf0e !important;
   color: #000000 !important;
+  padding-left: 22px !important;
+  display: inline;
 }
 :global {
   .ant-btn {
@@ -27,16 +30,12 @@
 .btnHeight {
   height: 35px !important;
   width: 150px;
-
-  > span {
-    text-align: center !important;
-    padding-right: 30px;
-  }
 }
 
 .btnTool {
+  float: right;
   color: #ffffff !important;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 // .btnLeft {
 //   margin-left: 20px;
