demo project detailt

--- a/src/pages/ProjectViewerpage/components/Content/WorkingTree/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/WorkingTree/style.module.less
@@ -51,7 +51,7 @@
   float: right;
 }
 .treeContainer {
-  height: 691px;
+  height: 681px;
   overflow: auto;
   padding-left: 10px;
 }
@@ -73,5 +73,10 @@
 :global {
   .ant-input {
     height: 40px !important;
+  }
+}
+:global {
+  .ant-tree > .ant-tree-treenode-switcher-open > .ant-tree-node-content-wrapper > .ant-tree-title {
+    font: Bold 14px/21px Roboto !important;
   }
 }
