--- a/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
@@ -46,6 +46,7 @@
 }
 .fileBtn {
   background-color: #ffcf0e !important  ;
+  color: #ffffff !important;
 }
 .btnSmall {
   width: 35px !important;
@@ -57,14 +58,14 @@
   height: 28px !important;
   width: 28px;
   background-color: #cccccc !important;
-  color: #fff;
+  color: #fff !important;
 }
 
 .editBtn {
   height: 28px !important;
   width: 28px;
   background-color: #16a085 !important;
-  color: #fff;
+  color: #fff !important;
 }
 .viewer {
   background-color: #e4e4e4;
@@ -90,6 +91,7 @@
   height: 40px !important;
   background-color: #ffffff !important;
   color: gray !important;
+  box-shadow: 1px 1px 1px 1px gray !important;
 }
 .pdf_container {
   margin: 0 auto;
@@ -101,4 +103,7 @@
   position: absolute;
   bottom: 50px;
   right: 50px;
+}
+.spin {
+  margin: auto;
 }
