--- a/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
@@ -91,13 +91,15 @@
   height: 40px !important;
   background-color: #ffffff !important;
   color: gray !important;
-  box-shadow: 1px 1px 1px 1px gray !important;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 }
 .pdf_container {
   margin: 0 auto;
 }
 .pdfPage {
   margin: 30px auto;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
 }
 .zoomBtn {
   position: absolute;
