--- a/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
@@ -109,3 +109,16 @@
 .spin {
   margin: auto;
 }
+.btnIcon {
+  background-color: #dfdfdf;
+  border-radius: 3px;
+  display: inline-block;
+  color: #666666;
+  font-size: 15px;
+  font-weight: bold;
+  text-decoration: none;
+  width: '14.24%';
+  text-align: center;
+  padding: 6px 0;
+  border: solid 0.4px #ffffff;
+}
