--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -175,3 +175,20 @@
     }
   }
 }
+
+.ant-table-thead > tr > th,
+.ant-table-tbody > tr > td {
+  padding: 10px;
+}
+.ant-table-thead > tr > th {
+  background-color: #FAFAFA;
+}
+.ant-table-tbody > tr > td {
+  background-color: #FFFFFF;
+}
+.ant-table-tbody > tr:hover > td {
+  background-color: #FAFAFA!important;
+}
+.ant-table-pagination.ant-pagination {
+  margin: 16px;
+}
