--- a/src/pages/ProjectPages/components/EntryContent/style.module.less
+++ b/src/pages/ProjectPages/components/EntryContent/style.module.less
@@ -1,6 +1,6 @@
 @import '~antd/es/style/themes/default.less';
 .container {
-  background-color: #f9f9f9;
+  background-color: #ffffff;
 }
 .toolbar {
   background-color: #ffffff;
