--- a/src/pages/ProjectViewerpage/components/Content/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/style.module.less
@@ -20,12 +20,7 @@
   color: #000000 !important;
   padding-left: 22px !important;
   display: inline;
-}
-:global {
-  .ant-btn {
-    border-width: 0 !important;
-    border-radius: 5px !important;
-  }
+  border: 0!important;
 }
 .btnHeight {
   height: 35px !important;
