--- a/src/assets/fontsshxd/style.css
+++ b/src/assets/fontsshxd/style.css
@@ -20,6 +20,7 @@
   text-transform: none;
   line-height: 1;
   font-size: 20px;
+  margin-right: 7px;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
