--- a/src/pages/ProjectPages/ProjectCreate/components/Content/style.module.less
+++ b/src/pages/ProjectPages/ProjectCreate/components/Content/style.module.less
@@ -17,12 +17,7 @@
 .missingDocsBtn {
   background-color: #ffcf0e !important;
   color: #000000 !important;
-}
-:global {
-  .ant-btn {
-    border-width: 0 !important;
-    border-radius: 5px !important;
-  }
+  border: 0!important;
 }
 .btnHeight {
   height: 35px !important;
