--- a/src/pages/ProjectViewerpage/components/Content/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/style.module.less
@@ -31,6 +31,8 @@
   float: right;
   color: #ffffff !important;
   margin-left: 10px;
+  display: flex !important;
+  align-items: center;
 }
 // .btnLeft {
 //   margin-left: 20px;
