--- a/src/pages/CustomersPage/EditTable/components/style.module.less
+++ b/src/pages/CustomersPage/EditTable/components/style.module.less
@@ -1,6 +1,7 @@
 @import '~antd/es/style/themes/default.less';
 .container {
   background-color: #F1F2F7;
+  border-bottom: 1px solid #DBDBDB;
 }
 .toolbar {
   background-color: #ffffff;
