--- a/src/pages/ProjectViewerpage/components/Content/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/style.module.less
@@ -1,14 +1,14 @@
 @import '~antd/es/style/themes/default.less';
 .container {
   background-color: #F1F2F7;
+  border: 1px solid #DBDBDB;
 }
 .toolbar {
   background-color: #ffffff;
   border-top-width: 0;
   border-bottom: solid 1px #dcdcdc;
-  max-height: 500px;
   z-index: 0;
-  padding-bottom: 10px;
+  
   width: 100%;
   padding: 15px;
 }
