--- a/src/pages/CustomersPage/style.module.less
+++ b/src/pages/CustomersPage/style.module.less
@@ -6,6 +6,9 @@
   font: Bold 14px/21px Roboto;
   text-align: left;
 }
+.border{
+  border: 1px solid #DBDBDB;
+}
 .textType {
   text-align: left;
   font: Regular 12px/14px Roboto;
