--- a/src/pages/ProjectPages/components/EntryContent/style.module.less
+++ b/src/pages/ProjectPages/components/EntryContent/style.module.less
@@ -14,6 +14,16 @@
 .btnRight {
   float: right;
 }
+
+:global{
+  .ant-table-tbody > tr:hover:not(.ant-table-expanded-row) > td {
+    background-color: rgb(251, 252, 235)!important;
+  }
+  .ant-tag {
+    font-size:  14px !important;
+    font-family: 'Roboto'!important;
+  }
+}
 .missingDocsBtn {
   background-color: #ffcf0e !important;
   color: #333132 !important;
