--- a/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/components/Content/ShowProject/style.module.less
@@ -9,6 +9,11 @@
   background-color: #e4e4e4;
   max-height: 100%;
 }
+:global{
+ .ant-btn> {
+    border: 0 !important
+  }
+}
 .doubleBtn {
   float: right;
   border-radius: 5px;
@@ -42,17 +47,16 @@
   color: #333132;
 }
 .fileContainer {
-  // padding: 20px;
+  height: 100%;
   background-color: #e4e4e4;
   width: 100%;
-  height: 665px;
 }
 .toolbar {
-  min-height: 102px;
+  min-height: 81px;
 }
 .showProject {
   padding: 20px;
-  margin-top: 10px;
+
   background-color: #f9f9f9;
 }
 
@@ -61,7 +65,6 @@
 }
 .fileBtn {
   background-color: #ffcf0e !important  ;
-  border: 0 !important;
 }
 .btnSmall {
   width: 35px !important;
@@ -85,7 +88,7 @@
 .viewer {
   background-color: #e4e4e4;
   width: 100%;
-  height: 664px;
+  height: 665px;
   padding-top: 50px;
   padding-bottom: 20px;
   overflow: scroll;
@@ -106,14 +109,14 @@
   height: 35px !important;
   background-color: #ffffff !important;
   color: gray !important;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+  box-shadow: 0 4px 4px 0 #cccccc, 0 6px 20px 0 #cccccc !important;
 }
 .pdf_container {
   margin: 0 auto;
 }
 .pdfPage {
   margin: 30px auto;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 4px 0 #cccccc, 0 6px 20px 0 #cccccc;
   border-radius: 5px;
 }
 .zoomBtn {
@@ -135,5 +138,5 @@
   width: '14.24%';
   text-align: center;
   padding: 6px 0;
-  border: solid 0.4px #ffffff;
+  
 }
