--- a/src/pages/StaffsPage/style.module.less
+++ b/src/pages/StaffsPage/style.module.less
@@ -61,19 +61,6 @@
   width: 100%;
   padding: 15px;
 }
-.linkBtn {
-  background: #ffcf0e;
-  border-radius: 5px;
-  color: #333132;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 20px;
-  height: 35px;
-  margin-left: 15px;
-  cursor: pointer;
-  transition: all 0.3s;
-  &:hover {
-    color: #333132;
-  }
+.border{
+  border: 1px solid #DBDBDB;
 }
