join api cmsUser and partner

--- a/src/pages/ProjectViewerpage/style.module.less
+++ b/src/pages/ProjectViewerpage/style.module.less
@@ -37,3 +37,39 @@
     border-radius: 3px !important;
   }
 }
+.headerBar {
+  background-color: #ffffff;
+  border-top-width: 0;
+  border-bottom: solid 1px #dcdcdc;
+  z-index: 0;
+  
+  width: 100%;
+  padding: 15px;
+}
+
+.container {
+  background-color: #F1F2F7;
+  border: 1px solid #DBDBDB;
+}
+.btnRight {
+  float: right;
+}
+.missingDocsBtn {
+  background-color: #ffcf0e !important;
+  color: #000000 !important;
+  padding-left: 22px !important;
+  display: inline;
+  border: 0!important;
+}
+.btnHeight {
+  height: 35px !important;
+  width: 150px;
+}
+
+.btnTool {
+  float: right;
+  color: #ffffff !important;
+  margin-left: 10px;
+  display: flex !important;
+  align-items: center;
+}
