--- a/src/pages/ProjectViewerpage/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/ShowProject/style.module.less
@@ -75,14 +75,13 @@
 .completedBtn {
   height: 28px !important;
   width: 28px;
-  background-color: #cccccc !important;
   color: #fff !important;
 }
 
 .editBtn {
   height: 28px !important;
   width: 28px;
-  background-color: #16a085 !important;
+  
   color: #fff !important;
 }
 .viewer {
@@ -139,4 +138,11 @@
   text-align: center;
   padding: 6px 0;
   
+}
+.Viewer {
+  background-color: #444;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: scroll;
 }
