--- a/src/pages/ProjectViewerpage/components/styles.module.less
+++ b/src/pages/ProjectViewerpage/components/styles.module.less
@@ -20,7 +20,7 @@
 }
 .card{
   width: 244px;
-  height: 370px;
+  height: 373px;
   border: 1px solid  #949494;
   margin-right: 30px;
   margin-top: 20px;
@@ -30,25 +30,38 @@
   justify-content: space-between;
 }
 .inputUploadContainer{
-  position: absolute;
   margin-top: 20px;
   width: 244px;
-  height: 370px;
+  height: 373px;
   border: 1px dashed #949494;
   display: flex;
-  align-items: center;
-  justify-content: center;
-
+  position: relative;
+}
+.inputInitUpload{
+  margin-top: 20px;
+  width: 451px;
+  height: 373px;
+  border: 1px dashed #949494;
+}
+.inputNoteUpload{
+  width: 979px;
+  height: 448px;
+  border: 1px dashed #949494;
+  margin: auto;
+  padding: 10px
+}
+.inputInitUpload:hover, .inputNoteUpload:hover{
+  border: 1px dashed #007BD7;
 }
 .inputUpload{
   bottom: 0;
   top: 0;
-  right: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   position: absolute;
   opacity: 0;
   overflow: hidden;
-
 }
 .input{ 
   border: 0;
@@ -76,10 +89,52 @@ button:focus {
   height: 430px;
   overflow: auto;
   display: flex;
+  list-style-type: none;
+}
+.modalContainer{
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 .item{
-  display: inline-block;
+  display: inline-block;}
+.noteInput{
+  width: 100%;
+  border: 0;
 }
-ul {
-  list-style-type: none;
+.emptyFileContainer{
+  position: relative;
+  height: 786px - 102px - 31px;
+  background-color: #E4E4E4;
+  margin: 102px 31px 31px 31px;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.textUpload{
+  font-weight: bold;
+  font-size: 28px;
+  color: #949494;
+}
+:global{
+   .ant-upload-drag {
+    margin: auto;
+    height: 300px !important;
+    width: 451px !important;
+    background-color: #E4E4E4 !important;
+    border: 2px dashed #949494 !important; 
+  } 
+   .ant-upload-drag:hover{
+    border: 2px dashed #007BD7 !important;
+   }
+    .ant-upload-btn {  
+    border: 0 !important;
+  } 
+}
+.loadingUpload{
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
