--- a/src/pages/ProjectViewerpage/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/ShowProject/style.module.less
@@ -117,6 +117,8 @@
   margin: 30px auto;
   box-shadow: 0 4px 4px 0 #cccccc, 0 6px 20px 0 #cccccc;
   border-radius: 5px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 .zoomBtn {
   position: absolute;
