--- a/src/pages/ProjectViewerpage/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/ShowProject/style.module.less
@@ -52,7 +52,7 @@
   width: 100%;
 }
 .toolbar {
-  min-height: 81px;
+  min-height: 100px;
 }
 .showProject {
   padding: 20px;
@@ -115,6 +115,12 @@
 }
 .pdfPage {
   margin: 30px auto;
+  box-shadow: 0 4px 4px 0 #cccccc, 0 6px 20px 0 #cccccc;
+  border-radius: 5px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+.pdfPageGrid{
   box-shadow: 0 4px 4px 0 #cccccc, 0 6px 20px 0 #cccccc;
   border-radius: 5px;
   margin-right: 20px;
