--- a/src/pages/ProjectViewerpage/WorkingTree/style.module.less
+++ b/src/pages/ProjectViewerpage/WorkingTree/style.module.less
@@ -107,3 +107,13 @@
     font: Bold 14px/21px Roboto !important;
   }
 }
+.inputUpload{
+  bottom: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  overflow: hidden;
+}
