--- a/src/pages/ProjectViewerpage/ShowProject/style.module.less
+++ b/src/pages/ProjectViewerpage/ShowProject/style.module.less
@@ -84,7 +84,7 @@
   height: 665px;
   padding-top: 50px;
   padding-bottom: 20px;
-  overflow: auto;
+  overflow: scroll;
 }
 .inputHeight {
   height: 35px !important;
